--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,62 @@ ul {
 }
 img {
     max-width: 100%;
+}
+.head {
+    background-color: #0020F4;
+    max-width: 1920px;
+    margin-bottom: 180px;
+    padding-top: 40px;
+    padding-bottom: 65px;
+    padding-left: 240px;
+    margin-inline: auto;
+}
+.divtwo {
+    margin-top: 133px;
+}
+.navbar li {
+    display: inline-block;
+    font-size: 16px;
+    letter-spacing: 0px;
+    line-height: 19px;
+    margin-left: 27px;
+}
+.info {
+    color: #FFFFFF;
+    font-family: font1;
+}
+.contact{
+    background-color: #FFFFFF;
+    color: #171717;
+    padding-top:18px;
+    padding-bottom: 18px;
+    padding-left: 36px;
+    padding-right: 43px;
+    border-radius: 28px;
+}
+.logo, .navbar {
+    color: #FFFFFF;
+    display: inline-block;
+    vertical-align: middle;
+}
+.office, .office1 {
+    display: inline-block;
+    vertical-align: middle;
+}
+.office {
+    max-width: 707px;
+}
+.office1 {
+    max-width: 948px;
+}
+.dots {
+    width: 10px;
+    height: 10px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 20px;
+}
+.twin {
+    opacity: 30%;
+}
